force-app/main/default/objects/Int_Agreement_Interest__c/Int_Agreement_Interest__c.object-meta.xml
<CustomObject>
    <description>Int Agreement Interest</description>
    <label>Int Agreement Interest</label>
    <nameField>
        <displayFormat>AGI-{0000000000}</displayFormat>
        <label>Agreement Interest Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Agreements Interest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>