force-app/main/default/objects/Int_Agreement_Interest__c/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <description>Transaction Date</description>
    <label>Transaction Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>