force-app/main/default/objects/Int_Agreement_Interest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Agreement_Name__c</columns>
    <columns>Agreement_Number__c</columns>
    <columns>Committed__c</columns>
    <columns>Interest_Amount__c</columns>
    <columns>Transaction_Date__c</columns>
    <columns>Transaction_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>